Fix deprecations spread across multiple modules (#4139)
* Fixed usages of deprecated Charsets.UTF_8 in test code

Components modified:
* camel-atom
* camel-xmlsecurity

* Fixed usages of deprecated Integer constructor in test code

Components modified:
* camel-aws2-sqs
* camel-aws-cw
* camel-aws-sqs
* camel-cometd
* camel-digitalocean
* camel-elsql
* camel-exec
* camel-quartz
* camel-resteasy
* camel-sql
* camel-syslog
* camel-thrift
* camel-twitter

* Fixed usages of deprecated Long constructor in test code

Components modified:
* camel-hazelcast
* camel-jira
* core/camel-management
* camel-micrometer
* camel-quartz
* camel-twitter

* Fixed usages of deprecated Double constructor in test code

Components modified:
* camel-bindy
* camel-kafka

* Fixed usages of deprecated matchesMockWaitTime method in test code

Components modified:
* camel-mail
* camel-tarfile
* camel-zip-deflater
* camel-zipfile

* camel-google-bigquery: fixed usage of inOnly